configurations to mod and makefile

--- a/backend/makefile
+++ b/backend/makefile
@@ -2,10 +2,13 @@ postgres:
 	docker run --name postgresDealTracker -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=vasDealTracker -d postgres
 
 createdb:
-	docker exec postgresDealTracker createdb -username=root dealTrackerDB
+	docker exec postgresDealTracker createdb --username=root  --owner=root dealTrackerDB
 
 dropdb:
-	docker exec postgresDealTracker drop dealTrackerDB
+	docker exec postgresDealTracker dropdb dealTrackerDB
+
+migrateup1:
+	migrate -path internal/db/migrations -database "postgresql://root:vasDealTracker@localhost:5432/dealTrackerDB?sslmode=disable" -verbose up
 
 sqlc:
 	sqlc generate
