--- a/backend/makefile
+++ b/backend/makefile
@@ -1,3 +1,5 @@
+# TODO: dockerize your web server by writing a Dockerfile for it.
+# TODO: put together a docker-compose.yml file. For now, you'll use it to start the application locally, then we'll use it for deploy or end2end tests.
 postgres:
 	docker run --name postgresDealTracker -p 5432:5432 -e POSTGRES_USER=root -e POSTGRES_PASSWORD=vasDealTracker -d postgres
 
