--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -1,13 +1,17 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "./internal/db/queries"
-    schema: "./internal/db/migrations"
+    queries: "./db/query"
+    schema: "./db/migrations"
     gen:
       go:
         package: "db"
-        out: "./internal/db/sqlc"
+        out: "./db/sqlc"
+        sql_package: "pgx/v5"
         emit_prepared_queries: true
         emit_interface: true
         # emit_exact_table_names: true
         emit_empty_slices: true
+        emit_json_tags: true
+        emit_pointers_for_null_types: true
+        # emit_sql_as_comment: true
