--- a/backend/app.env
+++ b/backend/app.env
@@ -1,3 +1,4 @@
 SYMMETRIC_KEY=01234567890123456789012345678901
 SERVER_ADDRESS=:8080
 DATABASE_URL=postgresql://root:vasDealTracker@localhost:5432/dealTrackerDB?sslmode=disable
+TOKEN_DURATION=1h
