--- a/backend/app.env
+++ b/backend/app.env
@@ -1,4 +1,5 @@
 SYMMETRIC_KEY=01234567890123456789012345678901
 SERVER_ADDRESS=:8080
-DATABASE_URL=postgresql://root:vasDealTracker@localhost:5432/dealTrackerDB?sslmode=disable
+DATABASE_SOURCE=postgresql://root:vasDealTracker@localhost:5432/dealTrackerDB?sslmode=disable
+MIGRATION_SOURCE=file://db/migrations
 TOKEN_DURATION=1h
