--- a/backend/app.env
+++ b/backend/app.env
@@ -1,5 +1,5 @@
 SYMMETRIC_KEY=01234567890123456789012345678901
 SERVER_ADDRESS=:8080
 DATABASE_SOURCE=postgresql://root:vasDealTracker@localhost:5432/dealTrackerDB?sslmode=disable
-MIGRATION_SOURCE=file://db/migrations
+MIGRATION_SOURCE=file://internal/db/migrations
 TOKEN_DURATION=1h
