--- a/backend/sqlc.yaml
+++ b/backend/sqlc.yaml
@@ -1,12 +1,12 @@
 version: "2"
 sql:
   - engine: "postgresql"
-    queries: "./db/query"
-    schema: "./db/migrations"
+    queries: "./internal/db/query"
+    schema: "./internal/db/migrations"
     gen:
       go:
         package: "db"
-        out: "./db/sqlc"
+        out: "./internal/db/sqlc"
         sql_package: "pgx/v5"
         emit_prepared_queries: true
         emit_interface: true
